[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Main.gd" id="1"]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Row" type="HBoxContainer" parent="VBox"]

[node name="ExtLabel" type="Label" parent="VBox/Row"]
text = "Ext:"

[node name="Ext" type="LineEdit" parent="VBox/Row"]
custom_minimum_size = Vector2(240, 0)
text = ".mp4"
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="VBox/Row"]
text = "Name:"

[node name="Name" type="LineEdit" parent="VBox/Row"]
custom_minimum_size = Vector2(240, 0)
text = "vlc"
size_flags_horizontal = 3

[node name="Row2" type="HBoxContainer" parent="VBox"]

[node name="BtnSysinfo" type="Button" parent="VBox/Row2"]
text = "Sysinfo"

[node name="BtnLatest" type="Button" parent="VBox/Row2"]
text = "Latest"

[node name="BtnProgids" type="Button" parent="VBox/Row2"]
text = "ProgIds"

[node name="BtnCapture" type="Button" parent="VBox/Row2"]
text = "Capture"

[node name="BtnApply" type="Button" parent="VBox/Row2"]
text = "Apply"

[node name="BtnAddRule" type="Button" parent="VBox/Row2"]
text = "Rule Add"

[node name="BtnRemoveRule" type="Button" parent="VBox/Row2"]
text = "Rule Remove"

[node name="BtnCheck" type="Button" parent="VBox/Row2"]
text = "Check"

[node name="WatchRow" type="HBoxContainer" parent="VBox"]

[node name="WatchLabel" type="Label" parent="VBox/WatchRow"]
text = "Watch rules:"

[node name="Interval" type="SpinBox" parent="VBox/WatchRow"]
custom_minimum_size = Vector2(160, 0)
min_value = 1.0
max_value = 3600.0
step = 1.0
value = 5.0

[node name="BtnStartWatch" type="Button" parent="VBox/WatchRow"]
text = "Start"

[node name="BtnStopWatch" type="Button" parent="VBox/WatchRow"]
text = "Stop"
disabled = true

[node name="WatchStatus" type="Label" parent="VBox/WatchRow"]
size_flags_horizontal = 3
text = "stopped"

[node name="Output" type="TextEdit" parent="VBox"]
size_flags_vertical = 3
placeholder_text = "Output..."
wrap_mode = 1
editable = false
